--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,10 +1,10 @@
 {{>layout/header}}
-<h1>SpringBoot webservice</h1>
+<h1>방명록</h1>
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">
-                글 등록
+                방명록 등록
             </a>
             {{#userName}}
                 Logged in as: <span id="user">{{userName}}</span>
@@ -12,7 +12,7 @@
             {{/userName}}
             {{^userName}}
                 <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
-                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login(검수중)</a>
             {{/userName}}
         </div>
     </div>
